--- a/templates/update.html
+++ b/templates/update.html
@@ -12,6 +12,7 @@
     <form action="/update/{{book.id}}" method="POST">
         <input type="text" name="title" id="title" value="{{book.title}}">
         <input type="text" name="author" id="author" value="{{book.author}}">
+        <input type="date" name="published" id="published" value="{{book.published}}">
         <input type="submit" value="Update book">
     </form>
 </div>
